--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
 
+:root {
+  --primary-color: #f60f20;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -48,23 +52,24 @@ section {
 
 .home-content {
   position: relative;
-  z-index: 98;
+  z-index: 95;
   max-width: 600px;
 }
 
 /* BUTTON */
 .btn {
   display: inline-block; /* links are set to display: inline by default, thus margin doesn't work */
-  background-color: #f60f20;
+  background-color: var(--primary-color);
   color: white;
   text-decoration: none;
   padding: 10px 30px;
   margin: 20px 0;
   cursor: pointer;
+  border: 0;
 }
 
 .btn:hover {
-  transform: scale(0.98);
+  transform: scale(0.99);
 }
 /* NAVIGATION TAB */
 .navigation {
@@ -74,4 +79,25 @@ section {
 /* TOGGLE */
 .toggle {
   position: fixed;
+  top: 0;
+  right: 0;
+  width: 60px;
+  height: 60px;
+  background: var(--primary-color) url(../images/menu.png); /*sandwitch icon*/
+  z-index: 98;
+  background-size: 30px;
+  background-repeat: no-repeat;
+  background-position: center;
+  cursor: pointer;
+}
+
+.toggle:hover {
+  transform: scale(0.98);
+}
+
+.toggle.active {
+  background: var(--primary-color) url(../images/close.png);
+  background-size: 25px;
+  background-repeat: no-repeat;
+  background-position: center;
 }
