--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ section {
   left: 100px;
   font-size: 2rem; /*multiplier of the set font-size*/
   font-weight: 700;
-  z-index: 99;
+  z-index: 20;
 }
 
 /* HOMEPAGE */
@@ -52,7 +52,7 @@ section {
 
 .home-content {
   position: relative;
-  z-index: 95;
+  z-index: 10;
   max-width: 600px;
 }
 
@@ -73,9 +73,63 @@ section {
 }
 /* NAVIGATION TAB */
 .navigation {
-  display: none;
+  position: fixed;
+  top: 0;
+  left: 100%;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  z-index: 15;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
+.navigation.active {
+  left: 0;
+}
+
+.navigation ul {
+  position: relative;
+}
+
+.navigation ul li {
+  list-style: none;
+  position: relative;
+  text-align: center;
+}
+
+.navigation ul li a {
+  font-size: 2.2rem;
+  color: #111;
+  text-decoration: none;
+  font-weight: 300;
+}
+
+.navigation ul li a:hover {
+  color: var(--primary-color);
+}
+
+.navigation .social-bar {
+  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 60px;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+.navigation .social-bar a {
+  display: inline-block;
+  transform: scale(0.5);
+}
+
+.navigation .email-icon {
+  position: absolute;
+  bottom: 20px;
+  transform: scale(0.5);
+}
 /* TOGGLE */
 .toggle {
   position: fixed;
@@ -84,11 +138,15 @@ section {
   width: 60px;
   height: 60px;
   background: var(--primary-color) url(../images/menu.png); /*sandwitch icon*/
-  z-index: 98;
+  z-index: 20;
   background-size: 30px;
   background-repeat: no-repeat;
   background-position: center;
   cursor: pointer;
+}
+
+.toggle:hover {
+  transform: scale(0.98);
 }
 
 .toggle.active {
