--- a/css/style.css
+++ b/css/style.css
@@ -28,9 +28,17 @@ p {
 
 section {
   display: flex;
+  flex-direction: column;
   height: 100vh;
   align-items: center;
   padding: 100px;
+  margin-top: 60px;
+}
+
+section.home {
+  /* flex direction default is row, but we need column for 'services' */
+  flex-direction: row;
+  margin-top: 0;
 }
 
 .logo {
@@ -40,20 +48,6 @@ section {
   font-size: 2rem; /*multiplier of the set font-size*/
   font-weight: 700;
   z-index: 20;
-}
-
-/* HOMEPAGE */
-.home-img {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  height: 110%;
-}
-
-.home-content {
-  position: relative;
-  z-index: 10;
-  max-width: 600px;
 }
 
 /* BUTTON */
@@ -125,11 +119,60 @@ section {
   transform: scale(0.5);
 }
 
+.navigation .social-bar a:hover {
+  transform: scale(0.6);
+}
+
 .navigation .email-icon {
   position: absolute;
   bottom: 20px;
   transform: scale(0.5);
 }
+
+/* HOMEPAGE PAGE */
+.home-img {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  height: 110%;
+}
+
+.home-content {
+  position: relative;
+  z-index: 10;
+  max-width: 600px;
+}
+/* SERVICES PAGE */
+.services {
+  margin-top: 40px;
+  display: grid;
+  /* to lay out 3 columns of 1 fragment each. Equivalent to 1fr 1fr 1fr; */
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 40px;
+  text-align: center;
+}
+
+.services .service {
+  padding: 30px;
+  border: 1px solid #f4f4f4;
+  border-radius: 5px;
+}
+
+.services .service h2 {
+  font-size: 24px;
+  font-weight: 500;
+  margin-top: 20px;
+  color: #8035f8;
+}
+
+.services .service:hover {
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+}
+
+.services .service .icon img {
+  max-width: 100px;
+}
+
 /* TOGGLE */
 .toggle {
   position: fixed;
@@ -145,13 +188,59 @@ section {
   cursor: pointer;
 }
 
-.toggle:hover {
-  transform: scale(0.98);
-}
-
 .toggle.active {
   background: var(--primary-color) url(../images/close.png);
   background-size: 25px;
   background-repeat: no-repeat;
   background-position: center;
+}
+
+/* MEDIA QUERY */
+@media (max-width: 1200px) {
+  .home-img {
+    display: none;
+  }
+
+  .services {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 800px) {
+  .logo {
+    top: 10px;
+    left: 40px;
+    font-size: 1.5rem;
+  }
+
+  section {
+    padding: 100px 40px;
+  }
+
+  .services {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media (max-width: 320px) {
+  /*for extra small smartphone screens*/
+  .home-img {
+    display: none;
+  }
+
+  .logo {
+    font-size: 1.3rem;
+  }
+
+  section {
+    padding: 100px 40px;
+  }
+
+  section h1 {
+    font-size: 1.2rem;
+  }
+
+  section p {
+    font-size: 1rem;
+  }
 }
