--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 
 :root {
   --primary-color: #f60f20;
+  --secondary-color: #8035f8;
 }
 
 * {
@@ -54,7 +55,7 @@ section.home {
 .btn {
   display: inline-block; /* links are set to display: inline by default, thus margin doesn't work */
   background-color: var(--primary-color);
-  color: white;
+  color: #fff;
   text-decoration: none;
   padding: 10px 30px;
   margin: 20px 0;
@@ -162,7 +163,7 @@ section.home {
   font-size: 24px;
   font-weight: 500;
   margin-top: 20px;
-  color: #8035f8;
+  color: var(--secondary-color);
 }
 
 .services .service:hover {
@@ -239,6 +240,98 @@ section.home {
   background-repeat: no-repeat;
   background-position: center;
 }
+/* CONTACT PAGE */
+.contact {
+  display: flex;
+  position: relative;
+  width: 100%;
+  margin-top: 50px;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.contact-info {
+  width: 350px;
+  padding: 60px 40px 20px;
+}
+
+.contact-info .info-box {
+  display: flex;
+  align-items: flex-start;
+  margin-bottom: 40px;
+}
+
+.contact-info .info-box .contact-icon {
+  width: 20px;
+  margin-right: 25px;
+}
+
+.contact-info .info-box .details h4 {
+  color: var(--secondary-color);
+}
+
+.contact-info .info-box .details p,
+.contact-info .info-box .details a {
+  color: #111;
+}
+
+.contact-form {
+  position: relative;
+  width: calc(100% - 400px);
+  padding: 60px 40px 20px;
+}
+
+.contact-form form {
+  width: 100%;
+}
+
+.contact-form .row {
+  width: 100%;
+  display: flex;
+}
+
+.contact-form .input50 {
+  width: 50%;
+  margin: 0 10px;
+}
+.contact-form .input100 {
+  width: 100%;
+  margin: 0 10px;
+}
+
+.contact-form .row input,
+.contact-form .row textarea {
+  position: relative;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  color: #111;
+  background-color: transparent;
+  width: 100%;
+  padding: 10px;
+  outline: none;
+  font-size: 16px;
+  font-weight: 300;
+  margin: 10px 0;
+  resize: none; /* for text area */
+}
+
+.contact-form .row textarea {
+  height: 150px;
+}
+
+.contact-form .row input[type='submit'] {
+  background-color: var(--primary-color);
+  color: #fff;
+  text-decoration: none;
+  padding: 10px 30px;
+  margin: 20px 0;
+  max-width: 250px;
+  cursor: pointer;
+  border: 0;
+}
+
+.contact-form .row input[type='submit']:hover {
+  transform: scale(0.98);
+}
 
 /* MEDIA QUERY */
 @media (max-width: 1200px) {
@@ -248,6 +341,21 @@ section.home {
 
   .services {
     grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 1000px) {
+  .contact {
+    flex-direction: column;
+  }
+
+  .contact-form {
+    width: 100%;
+    padding: 30px 30px 20px;
+  }
+
+  .contact-info {
+    width: 100%;
   }
 }
 
@@ -267,6 +375,17 @@ section.home {
   }
   .services .service {
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+  }
+
+  /* resize column elements to stack on each other and have width of the screen */
+  .contact-form .row {
+    flex-direction: column;
+  }
+
+  .contact-form .input50,
+  .contact-form .input100 {
+    width: 100%;
+    margin: 0;
   }
 }
 
