--- a/css/test.css
+++ b/css/test.css
@@ -1,60 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
-
-:root {
-  --primary-color: #f60f20;
-  --secondary-color: #8035f8;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box; /*so that padding doesn't affect width of the elements*/
-}
-
-html,
-body {
-  font-family: 'Poppins', sans-serif;
-  color: #111;
-}
-
-h1 {
-  font-size: 30px;
-  font-weight: 500;
-}
-
-p {
-  margin: 20px 0 10px 0;
-  font-size: 1.1rem;
-}
-
-section {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  align-items: center;
-  padding: 100px;
-  margin-top: 60px;
-}
-
-section.home {
-  /* flex direction default is row, but we need column for 'services' */
-  flex-direction: row;
-  margin-top: 0;
-}
-
-.logo {
-  position: absolute;
-  top: 30px;
-  left: 100px;
-  font-size: 2rem; /*multiplier of the set font-size*/
-  font-weight: 700;
-  z-index: 20;
-}
-
-/* BUTTON */
+@import url("https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap");
 .btn {
-  display: inline-block; /* links are set to display: inline by default, thus margin doesn't work */
-  background-color: var(--primary-color);
+  display: inline-block;
+  /* links are set to display: inline by default, thus margin doesn't work */
+  background-color: #f60f20;
   color: #fff;
   text-decoration: none;
   padding: 10px 30px;
@@ -74,7 +22,8 @@ section.home {
   right: 0;
   width: 60px;
   height: 60px;
-  background: var(--primary-color) url(../images/menu.png); /*sandwich icon*/
+  background: #f60f20 url(../images/menu.png);
+  /*sandwich icon*/
   z-index: 20;
   background-size: 30px;
   background-repeat: no-repeat;
@@ -83,13 +32,12 @@ section.home {
 }
 
 .toggle.active {
-  background: var(--primary-color) url(../images/close.png);
+  background: #f60f20 url(../images/close.png);
   background-size: 25px;
   background-repeat: no-repeat;
   background-position: center;
 }
 
-/* NAVIGATION TAB */
 .navigation {
   position: fixed;
   top: 0;
@@ -102,32 +50,26 @@ section.home {
   justify-content: center;
   align-items: center;
 }
-
 .navigation.active {
   left: 0;
 }
-
 .navigation ul {
   position: relative;
 }
-
 .navigation ul li {
   list-style: none;
   position: relative;
   text-align: center;
 }
-
 .navigation ul li a {
   font-size: 2.2rem;
   color: #111;
   text-decoration: none;
   font-weight: 300;
 }
-
 .navigation ul li a:hover {
-  color: var(--primary-color);
+  color: #f60f20;
 }
-
 .navigation .social-bar {
   display: flex;
   position: absolute;
@@ -142,18 +84,15 @@ section.home {
   display: inline-block;
   transform: scale(0.5);
 }
-
 .navigation .social-bar a:hover {
   transform: scale(0.6);
 }
-
 .navigation .email-icon {
   position: absolute;
   bottom: 20px;
   transform: scale(0.5);
 }
 
-/* HOMEPAGE PAGE */
 .home-img {
   position: absolute;
   bottom: 0;
@@ -166,7 +105,7 @@ section.home {
   z-index: 10;
   max-width: 600px;
 }
-/* SERVICES PAGE */
+
 .services {
   margin-top: 40px;
   display: grid;
@@ -175,48 +114,40 @@ section.home {
   grid-gap: 40px;
   text-align: center;
 }
-
 .services .service {
   padding: 30px;
   border: 1px solid #f4f4f4;
   border-radius: 5px;
 }
-
 .services .service h2 {
   font-size: 24px;
   font-weight: 500;
   margin-top: 20px;
-  color: var(--secondary-color);
+  color: #8035f8;
 }
-
 .services .service:hover {
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
 }
-
 .services .service .icon img {
   max-width: 100px;
 }
 
-/* WORK PAGE */
 .portfolio {
   display: flex;
   flex-wrap: wrap;
   margin-top: 20px;
   justify-content: center;
 }
-
 .portfolio .item {
   position: relative;
   width: 300px;
   height: 300px;
   margin: 5px;
 }
-
 .portfolio .item img {
   width: 100%;
   height: 100%;
 }
-
 .portfolio .item .action {
   position: absolute;
   top: 0;
@@ -230,7 +161,6 @@ section.home {
   opacity: 0;
   transition: 0.5s;
 }
-
 .portfolio .item .action a {
   display: inline-block;
   color: #fff;
@@ -238,12 +168,10 @@ section.home {
   border: 1px solid white;
   padding: 5px 15px;
 }
-
 .portfolio .item:hover .action {
   opacity: 1;
 }
 
-/* CONTACT PAGE */
 .contact {
   display: flex;
   position: relative;
@@ -252,47 +180,37 @@ section.home {
   justify-content: space-between;
   align-items: flex-start;
 }
-
 .contact-info {
   width: 350px;
   padding: 60px 40px 20px;
 }
-
 .contact-info .info-box {
   display: flex;
   align-items: flex-start;
   margin-bottom: 40px;
 }
-
 .contact-info .info-box .contact-icon {
   width: 20px;
   margin-right: 25px;
 }
-
 .contact-info .info-box .details h4 {
-  color: var(--secondary-color);
+  color: #8035f8;
 }
-
-.contact-info .info-box .details p,
-.contact-info .info-box .details a {
+.contact-info .info-box .details p, .contact-info .info-box .details a {
   color: #111;
 }
-
 .contact-form {
   position: relative;
   width: calc(100% - 400px);
   padding: 60px 40px 20px;
 }
-
 .contact-form form {
   width: 100%;
 }
-
 .contact-form .row {
   width: 100%;
   display: flex;
 }
-
 .contact-form .input50 {
   width: 50%;
   margin: 0 10px;
@@ -301,9 +219,7 @@ section.home {
   width: 100%;
   margin: 0 10px;
 }
-
-.contact-form .row input,
-.contact-form .row textarea {
+.contact-form .row input, .contact-form .row textarea {
   position: relative;
   border: 1px solid rgba(0, 0, 0, 0.1);
   color: #111;
@@ -314,15 +230,14 @@ section.home {
   font-size: 16px;
   font-weight: 300;
   margin: 10px 0;
-  resize: none; /* for text area */
+  resize: none;
+  /* for text area */
 }
-
 .contact-form .row textarea {
   height: 150px;
 }
-
-.contact-form .row input[type='submit'] {
-  background-color: var(--primary-color);
+.contact-form .row input[type=submit] {
+  background-color: #f60f20;
   color: #fff;
   text-decoration: none;
   padding: 10px 30px;
@@ -331,12 +246,10 @@ section.home {
   cursor: pointer;
   border: 0;
 }
-
-.contact-form .row input[type='submit']:hover {
+.contact-form .row input[type=submit]:hover {
   transform: scale(0.98);
 }
 
-/* MEDIA QUERY */
 @media (max-width: 1200px) {
   .home-img {
     display: none;
@@ -346,7 +259,6 @@ section.home {
     grid-template-columns: repeat(2, 1fr);
   }
 }
-
 @media (max-width: 1000px) {
   .contact {
     flex-direction: column;
@@ -361,7 +273,6 @@ section.home {
     width: 100%;
   }
 }
-
 @media (max-width: 800px) {
   .logo {
     top: 10px;
@@ -376,6 +287,7 @@ section.home {
   .services {
     grid-template-columns: 1fr;
   }
+
   .services .service {
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
   }
@@ -386,12 +298,11 @@ section.home {
   }
 
   .contact-form .input50,
-  .contact-form .input100 {
+.contact-form .input100 {
     width: 100%;
     margin: 0;
   }
 }
-
 @media (max-width: 320px) {
   /*for extra small smartphone screens*/
   .home-img {
@@ -414,3 +325,51 @@ section.home {
     font-size: 1rem;
   }
 }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  /*so that padding doesn't affect width of the elements*/
+}
+
+html,
+body {
+  font-family: "Poppins", sans-serif;
+  color: #111;
+}
+
+h1 {
+  font-size: 30px;
+  font-weight: 500;
+}
+
+p {
+  margin: 20px 0 10px 0;
+  font-size: 1.1rem;
+}
+
+section {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  align-items: center;
+  padding: 100px;
+  margin-top: 60px;
+}
+section.home {
+  /* flex direction default is row, but we need column for 'services' */
+  flex-direction: row;
+  margin-top: 0;
+}
+
+.logo {
+  position: absolute;
+  top: 30px;
+  left: 100px;
+  font-size: 2rem;
+  /*multiplier of the set font-size*/
+  font-weight: 700;
+  z-index: 20;
+}
+
+/*# sourceMappingURL=test.css.map */
